node/overseer/overseer-gen/tests/ui/err-09-uninit_generic_baggage.stderr
error[E0599]: no method named `build` found for struct `OverseerBuilder<DummySpawner, OverseerFieldInit<AwesomeSubSys>, OverseerFieldUninit<_>>` in the current scope
  --> tests/ui/err-09-uninit_generic_baggage.rs:59:10
   |
22 | #[overlord(signal=SigSigSig, error=OverseerError, event=Event, gen=AllMessages)]
   | -------------------------------------------------------------------------------- method `build` not found for this
...
59 |         .build()
   |          ^^^^^ method not found in `OverseerBuilder<DummySpawner, OverseerFieldInit<AwesomeSubSys>, OverseerFieldUninit<_>>`
   |
   = note: the method was found for
           - `OverseerBuilder<S, OverseerFieldInit<AwesomeSubSys>, OverseerFieldInit<T>>`
   = help: items from traits can only be used if the trait is implemented and in scope
   = note: the following traits define an item `build`, perhaps you need to implement one of them:
           candidate #1: `frame_support::traits::hooks::GenesisBuild`
           candidate #2: `prometheus::vec::MetricVecBuilder`
